[project]
name = "htm-almbc"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=3.5.1",
    "imbalanced-learn>=0.13.0",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "keras==2.15.0",
    "tensorflow>=2.15.1",
]
